# pydantic_pandas

./: .gitignore  .pre-commit-config.yaml  .pylintrc  pyproject.toml
