[tool.poetry]
name = "pydantic_pandas"
version = "0.1.0"
description = "Brings pydantic models to pandas dataframes"
authors = ["Sebastiaan Broekema <sebastiaanbroekema@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.4"



[tool.poetry.dev-dependencies]
black = "^21.10b0"
pylint = "^2.11.1"
pre-commit = "^2.15.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
